project/k8s/overlays/prod/service1-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1
spec:
  template:
    spec:
      containers:
        - name: service1
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 512Mi
